--- a/app/views/layouts/landingpage2.html.erb
+++ b/app/views/layouts/landingpage2.html.erb
@@ -138,7 +138,7 @@
     </header>
 
     <section id="about">
-      <div class="container">
+      <div class="container full-screen">
         <div class="row title-row">
           <div class="col-12 font-thin"><%= image_tag('logo.png', alt: "logo", title: "Dent Group", class: "logo") %> <span class="font-semibold">connects</span> you with your colleagues from <span class="font-semibold">everywhere around the world.</span></div>
         </div>
