--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -6,8 +6,10 @@
 		<ul class="text-muted list-inline">
 			<li><i class="fa fa-user"></i> <%= link_to @news.user.full_name, @news.user %></li>
 			<li><i class="fa fa-calendar"></i> <%= @news.published_at.to_formatted_s(:news) %></li>
-			<li><i class="fa fa-comments-o"></i> <%= pluralize(@news.comments_count, 'comment') %></li>
-			<li><i class="fa fa-edit"></i> <%= link_to "Edit", edit_news_path(@news), class: "text-muted" %></li>
+      <li><i class="fa fa-comments-o"></i> <%= pluralize(@news.comments_count, 'comment') %></li>
+      <% if current_user.admin? %>
+  			<li><i class="fa fa-edit"></i> <%= link_to "Edit", edit_news_path(@news), class: "text-muted" %></li>
+      <% end %>
 		</ul>
 		<hr>
 		<p class="blog-text">
@@ -47,8 +49,8 @@
 					<p><%= comment.body %></p>
 					<ul class="text-muted list-inline">
 						<li><i class="fa fa-clock-o"></i> <%= time_ago_in_words(comment.created_at) %></li>
-						<% if current_user?(comment.user) %>
-							<li><i class="fa fa-cog"></i> <%= link_to 'Delete', news_news_comments_path(comment), method: :delete, :confirm => "Are you sure you want to delete this comment?" %></li>
+            <% if policy(comment).destroy? %>
+              <li><i class="fa fa-cog"></i> <%= link_to 'Delete', news_news_comment_path(@news, comment), method: :delete, :confirm => "Are you sure you want to delete this comment?" %></li>     
 						<% end %>
 					</ul>
 				</div>
