--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -5,8 +5,10 @@
 		<h2 class="hl top-zero">Offers</h2>
 		<hr/>
 
-		<%= link_to 'Add new offer', new_offer_path %>
-		<br/>
+    <% if policy(Offer).new? %>
+		  <%= link_to 'Add new offer', new_offer_path %>
+      <br/>
+    <% end %>
 
 		<%= paginate @offers %>
 		
