Only RO region, news categories, homepage msg categories.

--- a/app/assets/stylesheets/style2.css.scss
+++ b/app/assets/stylesheets/style2.css.scss
@@ -125,3 +125,10 @@ body {
 .nav > li > a {
 	padding: 15px 12px;
 }
+
+.datetimepicker {
+  width: 200px;
+}
+.bootstrap-datetimepicker-widget>ul {
+  padding-left: 0px;
+}
