--- a/app/views/homepage_messages/edit.html.erb
+++ b/app/views/homepage_messages/edit.html.erb
@@ -9,9 +9,10 @@
 			<%= f.error_notification %>
 			<div class="form-inputs">
 				<%= f.input :title, :required => true, label: 'Title' %>
+        <%= f.association :homepage_messages_category, required: true, collection: HomepageMessagesCategory.where(deleted: false).order(ident: :asc), include_blank: false %>
+				<%= f.input :published_at, :as => :datetime_picker, :required => true, label: 'Publish at', :input_html => {:class => 'col-span-3 form-control'} %>
 				<%= f.input :website_country, collection: { 'International' => 'int', 'Romania' => 'ro', 'Germania' => 'de' }, include_blank: false %>
 				<%= f.input :body, :required => true, label: 'Content', as: :ckeditor %>
-				<%= f.input :published_at, :as => :datetime_picker, :required => true, label: 'Publish at', :input_html => {:class => 'col-span-3 form-control'} %>
 			</div>
 
 			<br/>
