--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -12,6 +12,8 @@
 
 <% if current_user.admin? %>
   <%= link_to 'Add news', new_news_path %>
+  &nbsp;&nbsp;&nbsp;
+  <%= link_to 'Manage news categories', news_categories_path %>
 <% end %>
 <br/>
 <div class="news-list-container news-list" ng-controller="NewsController">
